# mlx-kquant

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.linux-test  LICENSE  MANIFEST.in  README.md  bindings.cpp  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: bench_dsa_indexer_ab.py  bench_native_fp_ab.py
benchmarks/feeder/: bench_feeder_mlx.py
benchmarks/feeder/prototype/: feeder.swift
cmake/: patch-gguflib.cmake
docs/: imatrix.md  integration.md  kernels.md  lora.md  walkthrough.md
docs/feeder/: DESIGN.md  bench_feeder_mlx.py  harness.swift
metal/: kq_dsa_indexer.metal  kq_dsa_indexer_mma.metal  kq_dsa_qat.metal  kq_dsa_sparse_attn.metal  kq_moe_glu.metal  kq_moe_glu_kq.metal  kq_norm_fused.metal  kq_quantized.metal  kq_quantized_encode.metal  kq_quantized_nax.metal  kq_sdpa.metal
metal/mlx/backend/metal/kernels/: kq_dsa_indexer.h  kq_dsa_indexer_mma.h  kq_dsa_params.h  kq_dsa_qat.h  kq_dsa_sparse_attn.h  kq_moe_glu.h  kq_moe_glu_kq.h  kq_norm_fused.h  kq_quantized.h  kq_quantized_encode.h  kq_quantized_fp.h  kq_quantized_iq.h  kq_quantized_iq_tables.h  kq_quantized_kquants.h  kq_quantized_legacy.h  kq_quantized_nax.h  kq_sdpa.h  quantized_utils.h
mlx_kquant/: __init__.py  __main__.py  _deps.py  _install.py  codec_geometry.py  convert.py  imatrix.py  loader.py  lora_patch.py  mlx_lm_patch.py  nn.py  quantize.py  recipes.py
mlx_kquant/cli/: __init__.py  _args.py  calibrate.py  chat.py  fuse.py  inspect.py  lora.py  quantize.py  run.py  verify.py
mlx_kquant/licenses/: gguf-tools-LICENSE  llama.cpp-LICENSE  mlx-LICENSE  omlx-LICENSE
scripts/: check-codecs.py
src/: kquant.h  kquant_arena.cpp  kquant_codec.cpp  kquant_codec.h  kquant_cpu_decode.cpp  kquant_cpu_decode.h  kquant_cpu_encode.cpp  kquant_cpu_encode.h  kquant_cpu_encode_util.h  kquant_cpu_neon.cpp  kquant_cpu_neon.h  kquant_dequantize.cpp  kquant_dsa_indexer.cpp  kquant_dsa_qat.cpp  kquant_dsa_sparse_attn.cpp  kquant_encode.cpp  kquant_event.cpp  kquant_fp_tables.h  kquant_gather.cpp  kquant_gguf.cpp  kquant_gguf.h  kquant_internal.h  kquant_iq_encode.cpp  kquant_iq_encode.h  kquant_iq_encode_tables.h  kquant_iq_tables.h  kquant_matmul.cpp  kquant_metal_internal.h  kquant_moe_glu.cpp  kquant_norm_fused.cpp  kquant_ops.cpp  kquant_sdpa.cpp
tests/: conftest.py  gen_fixtures.py  test_arena.py  test_cli.py  test_codecs.py  test_cpu_decode.py  test_cpu_neon.py  test_deps.py  test_dequant.py  test_dsa_indexer.py  test_dsa_indexer_mma.py  test_dsa_kv_qat.py  test_dsa_qat.py  test_dsa_sparse_attn.py  test_encode.py  test_events.py  test_fuse_cli.py  test_gather.py  test_gguf.py  test_iq_encode.py  test_loader.py  test_lora_patch.py  test_matmul.py  test_matmul_cold.py  test_matmul_synth.py  test_moe_glu.py  test_nax.py  test_nn.py  test_norm_fused.py  test_recipes.py  test_sdpa.py  test_switch_gemm.py  test_vjp.py
tests/fixtures/: SHA256SUMS  q2_k.npz  q2_k_moe.npz  q3_k.npz  q3_k_moe.npz  q4_k.npz  q4_k_moe.npz  q5_k.npz  q5_k_moe.npz  q6_k.npz  q6_k_moe.npz
