[build-system]
requires = [
  "setuptools>=42",
  "cmake>=3.27",
  "mlx==0.31.2",
  "nanobind==2.12.0",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: end-to-end test needing a real GGUF (and, for parity, a llama.cpp binary); skipped unless KQUANT_TEST_GGUF_DIR is set",
  "slow: long-running (large prompts / long generation)",
]
